# OpusEncoderFilter

./: .gitmodules  AudioBuffer.h  CMakeLists.txt  DLLSetup.cpp  FilterParameters.h  OpusEncoderFilter.cpp  OpusEncoderFilter.def  OpusEncoderFilter.h  OpusEncoderFilter.rc  OpusEncoderProperties.h  Resource.h  stdafx.cpp  stdafx.h
